--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   geolocator: ^10.1.0
+  geocoding: ^2.1.1
   permission_handler: ^11.0.1
   flutter_typeahead: ^5.0.0
   provider: ^6.1.1
