--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     
     <application
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:label="redroute"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
